<resources>
    <string name="app_name">EADLab</string>
    <string name="string_hello">Hello</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email Address</string>
    <string name="register">Register</string>
    <string name="getAll">Get All Employees</string>
    <string name="home_icon">Home Icon</string>
    <string name="app_title">Fuel Assist - Sri Lanka</string>
    <string name="quote">\"Get your vehicle fueled without standing on queues\"</string>
    <string name="page_heading">Home Page</string>
    <string name="view_title">Vehicle Details</string>
    <string name="view_label1">1. Vehicle Number</string>
    <string name="view_labe12">Vehicle Type</string>
    <string name="view_label2">2. Vehicle Type</string>
    <string name="view_label3">3. Fuel Type</string>
    <string name="test_value">XXXX</string>
    <string name="sub_heading">Select Fuel Station</string>
    <string name="select_locat">Select Location</string>
    <string name="select_fuelstation">Select Fuel Station</string>
    <string name="input_date">Select Date</string>
    <string name="btn_homepage">Check Fuel</string>
    <string name="page_heading_2">View Fuel Details Page</string>
    <string name="view_heading">Fuel Details</string>
    <string name="view_fuellabel_1">1. Fuel Station Location</string>
    <string name="view_fuellabel_2">2. Fuel Station Name</string>
    <string name="fuel_detail1">Arrived Time</string>
    <string name="fuel_detail2">Arrived Litres</string>
    <string name="fuel_detail3">Remaining Litres</string>
    <string name="current_veh_count">Current Vehicle Count in Queue</string>
    <string name="button_label_fuel">Enter Queue</string>
    <string name="page_heading3">Queue Details</string>
    <string name="vehicle_count_label">Your Vehicle Count in Queue</string>
    <string name="remain_fuel">Remianing Fuel Volumne</string>
    <string name="label_waittime">Waiting Time</string>
    <string name="label_time">00:00:00 A.M</string>
    <string name="btn_label_exit">Exit Queue</string>
    <string name="btn_fueled">Fueled Vehicle</string>
    <string name="shed_notavailable">No Registered Shed available in selected location</string>
    <string name="no_fuel">Fuel is currently not available.</string>
    <string name="fuel_amount">Amount of Fuel to pump</string>
    <string name="fueled_details">Fueled Details</string>
    <string name="shed_name">Fuel Station Name</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="fueled_amount">Amount of Fuel Pumped</string>
    <string name="total_cost">Total Cost</string>
    <string name="rupees">Rs.</string>
    <string name="return_home">Return to Homepage</string>
    <string name="logout">Logout</string>
    <string name="label_locate">Location</string>
    <string name="veh_count">Vehicle Count</string>
    <string name="Add_btn">Add Fuel Details</string>
    <string-array name="location_array">
        <item>Select a location</item>
        <item>Location 1</item>
        <item>Location 2</item>
        <item>Location 3</item>
    </string-array>
    <string-array name="fuelStation_array">
        <item>Select a Fuel Station</item>
        <item>Fuel Station 1</item>
        <item>Fuel Station 2</item>
        <item>Fuel Station 3</item>
    </string-array>
    <string-array name="fuelType_array">
        <item>Select a Fuel Type</item>
        <item>Petrol - 92 (Normal)</item>
        <item>Petrol - 95 (Super)</item>
        <item>Diesel - 92 (Normal)</item>
        <item>Diesel - 95 (Super)</item>
    </string-array>

    //login and registration Strings
    <string name="string_login">Log in</string>
    <string name="string_next">Next</string>
    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_conPassword">Confirm Password</string>
    <string name="string_reg">Register</string>
    <string name="string_cusReg">Customer Registration</string>
    <string name="string_shedReg">Shed Registration</string>
    <string name="string_mobileNo">Mobile Number</string>
    <string name="string_vehicleNum">Vehicle Number</string>
    <string name="string_fuelTyle">Fuel Type</string>
    <string name="string_shedName">Shed name</string>
    <string name="string_shedNum">Petrol - 92 (Normal)</string>
    <string name="string_fuel1">Petrol - 92 (Normal)</string>
    <string name="string_fuel2">Petrol - 95 (Super)</string>
    <string name="string_fuel3">Diesel - 92 (Normal)</string>
    <string name="string_fuel4">Diesel - 95 (Super)</string>
    <string name="litres">Litres Available</string>
    <string name="obtained">Fuel Obtained</string>

    <string-array name="vehicleType_array">
        <item>Select a Vehicle Type</item>
        <item>Bike</item>
        <item>Threewheel</item>
        <item>Car</item>
        <item>Van</item>
    </string-array>

    <string-array name="obtained_array">
        <item>Select one</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>