<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerHomepage">

    <ImageButton
        android:id="@+id/imgbtn_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/home_icon"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/homeicon" />

    <TextView
        android:id="@+id/txt_apptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quote"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_apptitle"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/txt_pagetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/page_heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view_vehdetailsOut"
        android:layout_width="372dp"
        android:layout_height="120dp"
        android:layout_marginTop="13dp"
        android:background="#130C0C"
        android:backgroundTintMode="add"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pagetitle"
        app:layout_constraintVertical_bias="0.02" />

    <View
        android:id="@+id/view_vehdetailsIn"
        android:layout_width="370dp"
        android:layout_height="118dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:backgroundTintMode="add"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pagetitle"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txt_viewtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pagetitle"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/txt_maintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sub_heading"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/txt_viewlabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/txt_viewlabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <TextView
        android:id="@+id/txt_viewlabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txt_veh_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/txt_veh_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/txt_veh_fueltype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <View
        android:id="@+id/view2"
        android:layout_width="372dp"
        android:layout_height="15dp"
        android:background="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_vehdetailsOut"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_location"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/select_locat"
        android:entries="@array/location_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_maintitle"
        app:layout_constraintVertical_bias="0.034" />

    <Spinner
        android:id="@+id/spinner_fuelstation"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/select_fuelstation"
        android:entries="@array/fuelStation_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_location"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/edittxt_date"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_date"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_fuelstation"
        app:layout_constraintVertical_bias="0.064" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_checkfuel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:foregroundTint="#1E1A1A"
        android:text="@string/btn_homepage"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_date"
        app:layout_constraintVertical_bias="0.503" />

</androidx.constraintlayout.widget.ConstraintLayout>